# annomate

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/design/: 2026-05-28-format-conversion-and-tooling.md  2026-05-28-local-model-assistance.md
scripts/: build_html.py
skills/: README.md
skills/annomate/: SKILL.md  attributes.md  region-encoding.md
skills/annotate/: SKILL.md  ai-tools.md  common-patterns.md  perception-gotchas.md  region-encoding.md
skills/via-annotator/: SKILL.md
src/annomate/: __init__.py  http_handler.py  image_io.py  server.py  store.py
src/annomate/models/: __init__.py  chat_vlm.py  clip_grader.py  config.py  florence2.py  grounding_dino.py  registry.py  saliency.py  sam2.py  tiling.py  yolo_world.py  yoloe.py
src/annotate/: __init__.py  http_handler.py  image_io.py  server.py  store.py
src/annotate/models/: __init__.py  base.py  chat_vlm.py  clip_grader.py  config.py  florence2.py  grounding_dino.py  registry.py  saliency.py  sam2.py  yolo_world.py  yoloe.py
src/via_mcp/: http_handler.py  server.py  store.py
tests/: test_http.py  test_image_io.py  test_models.py  test_store.py  test_tiling.py  test_tools.py
