[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annotate"
version = "0.1.0-dev"
description = "MCP server for VIA v3 — lets Claude read and write image annotations in real time"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["via", "vgg", "annotation", "mcp", "model-context-protocol", "claude", "image-annotation"]
dependencies = [
    "mcp>=1.27,<2.0",
    "pillow>=10.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Local-model assistance layer. Pull these in with `pip install annotate[ai]`.
# Base package stays small; AI tools advertise themselves but return a helpful
# "install the [ai] extra" error when these deps aren't present.
ai = [
    "torch>=2.2",
    "transformers>=4.45",
    "accelerate>=0.30",
    "sahi>=0.11",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
]

[project.scripts]
annotate = "annotate.server:main"

[project.urls]
Repository = "https://github.com/caliperhq/annotate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
annotate = ["via_image_annotator.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
