[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annomate-mcp"
version = "0.1.0"
description = "MCP server for VIA v3 — lets Claude read and write image annotations in real time"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["via", "vgg", "annotation", "mcp", "model-context-protocol", "claude", "image-annotation"]
dependencies = [
    "mcp>=1.27,<2.0",
    "pillow>=10.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Local-model assistance layer. Pull these in with `pip install annomate[ai]`.
# Base package stays small; AI tools advertise themselves but return a helpful
# "install the [ai] extra" error when these deps aren't present.
ai = [
    "torch>=2.2",
    "transformers>=4.45",
    "accelerate>=0.30",
    "sahi>=0.11",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
]
# YOLO-World (Apache) + YOLOE (AGPL-3.0). ultralytics ships both.
# Note: installing YOLOE in a network service may have AGPL implications
# — see the YOLOE adapter module docstring.
yolo = [
    "ultralytics>=8.3",
]
# Chat-style VLMs for free-form Q&A via via_ask_model. The default config
# uses Qwen2.5-VL-3B; users can swap for SmolVLM, Phi-3.5-Vision, etc.
chat = [
    "qwen-vl-utils>=0.0.8",
]
# Format-conversion + metadata layer. Lets via_add_file accept formats
# Pillow doesn't handle natively (HEIC/HEIF/AVIF). via_read_metadata
# prefers ExifTool when the `exiftool` CLI is on PATH; falls back to
# Pillow EXIF otherwise.
io = [
    "pillow-heif>=1.3",
    "PyExifTool>=0.5",
    # pdf2image wraps the poppler-utils CLI; you need pdftoppm on PATH
    # (apt: poppler-utils; brew: poppler; emerge: app-text/poppler)
    "pdf2image>=1.17",
]
# OCR layer — uses the tesseract CLI (apt: tesseract-ocr +
# tesseract-ocr-<lang>; brew: tesseract tesseract-lang;
# emerge: app-text/tesseract with the right LINGUAS USE flags).
ocr = [
    "pytesseract>=0.3",
]

[project.scripts]
annomate = "annomate.server:main"

[project.urls]
Homepage = "https://github.com/caliperhq/annomate"
Repository = "https://github.com/caliperhq/annomate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
annomate = ["via_image_annotator.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
